--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -2,13 +2,14 @@
   "name": "dashboard",
   "version": "1.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack serve --config config/webpack.dev.js",
+    "build": "webpack --config config/webpack.prod.js"
   },
   "dependencies": {
-    "chart.js": "^2.9.4",
-    "primeflex": "^2.0.0",
-    "primeicons": "^4.0.0",
-    "primevue": "^3.0.1",
+    "chart.js": "^3.5.1",
+    "primeflex": "^3.0.1",
+    "primeicons": "^4.1.0",
+    "primevue": "^3.7.2",
     "vue": "^3.0.0"
   },
   "devDependencies": {
